@@ -1,3 +1,9 @@
+2012-11-08  Pedro Vicente  <pvicente@uci.edu>
+
+	* ncks: GPE group attribute extraction
+	
+	* ncks regression test #30: GPE group attribute extraction
+	
 2012-11-07  Charlie Zender  <zender@uci.edu>
 
  	* NCO 4.2.3 release procedure:
